--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "create-react-app": "^4.0.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.11.2",
+    "react-hooks": "^1.0.1",
     "react-scripts": "4.0.0",
+    "react-stripe-elements": "^6.1.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
